app/assets/stylesheets/showcase.css.scss
$title-gradient-top: rgba(51, 51, 51, 0.9);
$title-gradient-bottom: rgba(51, 51, 51, 0.4);
$title-border: #999;
$title-color: #fff;
$title-shadow-color: #333;
$section-border-color: #fff;
$section-color: #d3d3d3;
$scrollbar-rail-color: #dedede;
$scrollbar-color: #666;
$black: #000;
$white: #fff;


.showcase-outer {
  position: relative;

  > .ps-scrollbar-x-rail {
    animation-duration: 0.5s;
    animation-name: scrollfadein;
    background-color: $scrollbar-rail-color;
    opacity: 0.7;

    .ps-scrollbar-x {
      background-color: $scrollbar-color;
    }
  }
}

.showcases-title-bar,
.intro-title-bar {
  background: -moz-linear-gradient(top, $title-gradient-top 0%, $title-gradient-bottom 100%);
  background: -webkit-linear-gradient(top, $title-gradient-bottom 0%, $title-gradient-top 100%);
  background: linear-gradient(to bottom, $title-gradient-top 0%, $title-gradient-bottom 100%);
  border-bottom: solid 1px $title-border;
  margin-bottom: 5px;
  padding: 9px 40px;
  position: relative;


}

.showcases-title-bar-title,
.intro-title-bar-title {
  color: $title-color;
  font-family: GPCMed;
  font-size: 16px;
  font-weight: normal;
  letter-spacing: 1.1px;
  line-height: 16px;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.showcase-title-page {
  color: $title-color;
  overflow: hidden;

  div {
    white-space: normal;
  }
}

.showcase-name-1,
.showcase-name-2,
.showcase-title-container {
  display: inline-block;
  margin: 0;
  width: auto;
}

.showcase-title-container {
  border: solid 1px $title-color;
  border-width: 1px 0;
  margin-bottom: 1em;
  padding: 1em;
}

.showcase-name-1,
.showcase-name-2 {
  text-shadow: 2px 2px 3px $title-shadow-color;
  text-transform: uppercase;
}

.showcase-name-1 {
  font-size: 50px;
  font-weight: bold;
  text-align: center;
  white-space: normal;
}

.showcase-name-2 {
  margin-top: 8px;
}

.showcase-title-description-container {
  display: inline-block;
  margin: 30px auto 0;
}

.showcase-title-description {
  font-size: 18px;
  line-height: 30px;
  max-width: 30em;
  text-align: left;
  text-shadow: 1px 1px 2px $title-shadow-color;
}

.showcase-card {
  .showcase-name-1 {
    font-size: 24px;
  }

  .showcase-name-2 {
    font-size: 20px;
  }

  .showcase-title-description-container {
    display: inline-block;
    margin: 0;
  }

  .showcase-title-description {
    font-size: 15px;
    line-height: inherit;
  }
}

.section-container-text {
  background: rgba(51, 51, 51, 0.95);
  color: $section-color;
  font-size: 14px;
  line-height: 25px;
  overflow-x: hidden;
  padding: 8px 15px;

  h2 {
    font-size: 24px;
    font-weight: bold;
  }
}

.section-container-image {
  img {
    border: solid 3px $section-border-color;
  }

  .section-transcript {
    background: image_url("transcript.png");
    background-size: cover;
    border: none;
    bottom: 8px;
    height: 40px;
    left: 8px;
    opacity: 0.8;
    position: absolute;
    width: 40px;
  }
}

.section-pullquote .section-container-text {
  font-family: serif;
  font-size: 34px;
  line-height: 1.5em;
}

.section-title {

  .section-container-text-title {
    font-size: 45px;
    font-weight: normal;
    text-align: center;
  }

  .section-container-text-subtitle {
    text-align: center;
  }
}

.section-medium .section-container-text {
  font-size: 20px;
}

.section-description,
.modal-collection-description .collection-description {
  font-size: 1em;
  margin: 1em auto;
  max-width: 60rem;
}

.sections-modals,
.items-modals {
  .modal-body {
    padding: 0;

    h2 {
      margin-left: 1em;
      margin-top: 1em;
    }
  }
}

// animation
.showcase-inner {
  animation-duration: 1.5s;
  animation-name: slidein;
}

@keyframes slidein {

  0% {
    margin-left: 100%;
  }

  55% {
    margin-left: -2%;
  }

  100% {
    margin-left: 0%;
  }
}

.section-continue {

  .section-container {
    overflow: hidden;

  }

}

// scroll bars
.ps-container {

  > .ps-scrollbar-x-rail {
    display: block;
    height: 15px;
    margin-bottom: 10px;
    margin-left: 25%;
    margin-right: 25%;
    transition: none;
    width: 50%;

    .ps-scrollbar-x {
      height: 15px;
    }
  }
}

@keyframes scrollfadein {
  0% {
    opacity: 0.1;
  }

  100% {
    opacity: 0.7;
  }
}

